Fix nit in version 4.23 in which -p does not work (thus updating access times when it shouldn't).  The PR's patch has been incorporated upstream as magic.c rev 1.46.

PR:		107676
Submitted by:	Dr. Markus Waldeck <waldeck@gmx.de>